# carver

./: .babelrc  .eslintrc  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  CLAUDE.md  Cargo.toml  Gruntfile.js  LICENSE  README.md  bower.json  index.html  index_bundle.js  index_bundle.js.map  jestSetup.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  webpack.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
app/: index.html  index.jsx
app/__tests__/: carver.tests.js  sum.test.js
app/components/: Canvas.jsx  Controls.jsx  Footer.jsx  Loading.jsx  Main.jsx  NavigationBar.jsx  Splash.jsx
app/containers/: CanvasContainer.jsx  ControlsContainer.jsx  NavigationBarContainer.jsx  SplashContainer.jsx
app/redux/: image.js
app/scripts/: carver.js  carver.worker.js  carver2.js  carver_wasm_wrapper.js  main.js
app/styles/: custom.css  main.scss  styles.js
crates/carver-wasm/: Cargo.toml
crates/carver-wasm/src/: lib.rs
scripts/: main.js  vendor.js
src/: app.css  carver.c  carver.cpp  main.tsx  makefile  post.js  types.ts
src/algorithm/: carver.test.ts  carver.ts  resizeSteps.test.ts  vitest.setup.ts  wasm-consistency.test.ts
src/components/: App.tsx  Canvas.tsx  CanvasTabs.tsx  Controls.tsx  CostDetail.tsx  EnergyDetail.tsx  Explainer.tsx  GreyscaleDetail.tsx  KernelDetail.tsx  Masthead.tsx  PlaybackControls.tsx  SamplePicker.tsx  StageInspector.tsx  TimingPanel.tsx  Visualizer.tsx  VisualizerCanvas.tsx  image-loading.ts  reducer.test.ts  reducer.ts  timing.test.ts  (+1 more)
styles/: main.css
(+11 files in other folders)
